--- a/quiz2.html
+++ b/quiz2.html
@@ -1,41 +1,58 @@
 <doctype html>
 <html lang="en">
-<head>
-	<meta charset="UTF-400000">
-	
-</head>
-<body>
-	<h1>Welcome To The Wonderful World of Debugging Code</h1>
+	<head>
+		<meta charset="utf-8">
+		<title>Quiz2</title>
+		<link rel="stylesheet" href="css/quiz2.css">
+	</head>
+	<body>
+		<h1>Welcome To The Wonderful World of Debugging Code</h1>
 
-	<section id="mainSection">
-		<p>This is a paragraph, I promise.</p
+		<section id="mainSection">
+			<p>This is a paragraph, I promise.</p>
 
-		<ul class="links">
-			<li>
-				<a>Link 1<a>
-			</li>
-			<li>
-				<a href="#">Link 2</a>
-			</li>
-			<li>
-				<a href="#">Link 487
-			</li>
-		</ul>
-	
+			<ul class="links">
+				<li>
+					<a href="#">Link 1<a>
+				</li>
+				<li>
+					<a href="#">Link 2</a>
+				</li>
+				<li>
+					<a href="#">Link 487</a>
+				</li>
+			</ul>
 
-	<p>I am a lonely paragraph, with no immediate parent.</p>
+			<p>I am a lonely paragraph, with no immediate parent.</p>
+		</section>
 
-	<section id=secondarySection>
-		<p>Woop woop!!!</p>
-		<p>See how elegantly we're spaced out?</p>
-		<p>Yeah, we're spaced out alright.<//p>
-		
-		<ol>
-			<li>I'm like an unordered list</li>	
-			<li>But I'm more orderly<li>
-			<li>That was a really bad joke.</li>
-		<ol>
-	</section>
-	
-</body>
-</hmtl>
+		<section id="secondarySection">
+			<p>Woop woop!!!</p>
+
+			<p>See how elegantly we're spaced out?</p>
+
+			<p>Yeah, we're spaced out alright.</p>
+
+			<ol>
+				<li>I'm like an unordered list</li>
+				<li>But I'm more orderly</li>
+				<li>That was a really bad joke.</li>
+			</ol>
+		</section>
+
+		<section id="accordion">
+			<button>click the accordion to see what's inside</button>
+			<div id="accordionContent">
+				<p>This is what's inside the accordion This is what's inside the accordion This is what's inside the accordion</p>
+				<p>This is what's inside the accordion This is what's inside the accordion This is what's inside the accordion</p>
+				<p>This is what's inside the accordion This is what's inside the accordion This is what's inside the accordion</p>
+				<p>This is what's inside the accordion This is what's inside the accordion This is what's inside the accordion</p>
+				<button id="goodbye">Goodbye</button>
+			</div>
+		</section>
+
+		<button id="happy">Make me happy!</button>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+		<script src="js/quiz2.js"></script>
+	</body>
+</html>
